--- a/product-page/package.json
+++ b/product-page/package.json
@@ -1,7 +1,7 @@
 {
   "name": "product-page",
   "version": "0.1.0",
-  "homepage": "https://connormulqueen.github.io/netflix-leaving-soon",
+  "homepage": "https://connormulqueen.github.io/Netflix-Leaving-Soon",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.0",
